--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                     <li>HTML consists of a series of elements.</li>
                 </ol>   
             </p>
+            <span></span>
+            <span></span>
             </div>
         <div class="languages">
             <center>
@@ -52,6 +54,8 @@
                     <li>CSS saves a lot of work. It can control the layout of multiple web pages all at once.</li>
                 </ul>
             </p>
+            <span></span>
+            <span></span>
             </div>
         <div class="languages">
             <center>
@@ -64,6 +68,8 @@
                     <li>JavaScript is easy to learn.</li>
                 </ol>
             </p>
+            <span></span>
+            <span></span>
             </div>
         <div class="languages">
             <center>
@@ -77,6 +83,8 @@
                     <li>PHP is a widely-used, free, and efficient alternative to competitors such as Microsoft's ASP.</li>
                 </ul>
             </p>
+            <span></span>
+            <span></span>
             </div>
         <div class="languages">
             <center>
@@ -90,6 +98,8 @@
                     <li>Python has a simple syntax similar to the English language.</li>
                 </ol>
             </p>
+            <span></span>
+            <span></span>
         </div>
         <div class="languages">
             <center>
@@ -102,32 +112,66 @@
                     <li>With React Native, you don't build a mobile web app, an HTML5 app, or a hybrid app.</li>
                 </ul>
             </p>
+            <span></span>
+            <span></span>
         </div>
-        <div class="languages">
+        <div id="boots" class="languages">
             <center>
-                <a href="https://getbootstrap.com/docs/4.1/getting-started/introduction/"><img src="images/bootstrap.png" width="200px" height="200px"></a>
+                <a href="https://getbootstrap.com/docs/4.1/getting-started/introduction/"><img  src="images/bootstrap.png" width="200px" height="200px"></a>
                 <h3> Bootstrap </h3>
             </center>
             <p>
               <ol>
-                    <li>Bootstrap is the most popular HTML, CSS, and JavaScript framework for developing responsive, mobile-first websites.</li>
+                    <li>Bootstrap is the most popular HTML, CSS, and JavaScript framework <br> for developing responsive, mobile-first websites.</li>
                     <li>Bootstrap is completely free to download and use!</li>
                 </ol>
             </p>
+            <span></span>
+            <span></span>
         </div>
         <div class="languages">
             <center>
-                <a href="https://p5js.org/reference/"><img src="images/p5Js.png" width="200px" height="200px"></a>
+                <a href="https://p5js.org/reference/"><img  class="p5" src="images/p5Js.png" width="200px" height="200px"></a>
                 <h3> p5.Js </h3>
             </center>
             <p>
               <ol>
-                    <li>p5.js is a JavaScript library for creative coding,  and inclusive for artists,
+                    <li>p5.js is a JavaScript library for creative coding,  and inclusive for artists,<br>
                         designers,beginners, and anyone else!</li>
                     <li>p5.js is free and open-source because we believe
-                        software, and the tools to learn it, should be accessible to everyone.</li>
+                        software, and the <br> tools to learn it, should be accessible to everyone.</li>
                 </ol>
             </p>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="languages">
+            <center>
+                <a href="https://code.org"><img src="images/code-org.png" width="200px" height="200px"></a>
+                <h3> Code.org</h3>
+            </center>
+            <p>
+              <ol>
+                    <li>Code.org is a platform to buid 2d animated games and web applications .</li>
+                    <li>It uses drag and drop blocks as commands.</li>
+                </ol>
+            </p>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="languages">
+            <center>
+                <a href="https://youtu.be/iosNuIdQoy8"><img src="images/firebase.png" width="200px" height="200px"></a>
+                <h3> Firebase</h3>
+            </center>
+            <p>
+              <ol>
+                    <li>Firebase helps you build and run successful apps .</li>
+                    <li>It helps us to create databases for our apllications.</li>
+                </ol>
+            </p>
+            <span></span>
+            <span></span>
         </div>
     </div>
     </body>
